--- a/addwindow.ui
+++ b/addwindow.ui
@@ -12,318 +12,15 @@
   </property>
   <property name="palette">
    <palette>
-    <active>
-     <colorrole role="Button">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Light">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Midlight">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Dark">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Mid">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="BrightText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="AlternateBase">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>7</red>
-        <green>7</green>
-        <blue>7</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="ToolTipBase">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="PlaceholderText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </active>
-    <inactive>
-     <colorrole role="Button">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>64</red>
-        <green>65</green>
-        <blue>66</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Light">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>55</red>
-        <green>55</green>
-        <blue>55</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Midlight">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>52</red>
-        <green>52</green>
-        <blue>52</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Dark">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>64</red>
-        <green>65</green>
-        <blue>66</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Mid">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>160</red>
-        <green>160</green>
-        <blue>160</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="BrightText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>51</green>
-        <blue>51</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>46</red>
-        <green>47</green>
-        <blue>48</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>46</red>
-        <green>47</green>
-        <blue>48</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="AlternateBase">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>53</red>
-        <green>54</green>
-        <blue>55</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="ToolTipBase">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>64</red>
-        <green>65</green>
-        <blue>66</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="PlaceholderText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>127</red>
-        <green>127</green>
-        <blue>128</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </inactive>
-    <disabled>
-     <colorrole role="Button">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Light">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Midlight">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Dark">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Mid">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="BrightText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="AlternateBase">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>53</red>
-        <green>54</green>
-        <blue>55</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="ToolTipBase">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>64</red>
-        <green>65</green>
-        <blue>66</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="PlaceholderText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>127</red>
-        <green>127</green>
-        <blue>128</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </disabled>
+    <active/>
+    <inactive/>
+    <disabled/>
    </palette>
   </property>
   <property name="windowTitle">
    <string>Add New Pokemon</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="1">
-    <widget class="QLineEdit" name="stypeInput"/>
-   </item>
    <item row="1" column="0">
     <widget class="QLabel" name="ftypeLabel">
      <property name="text">
@@ -333,9 +30,6 @@
    </item>
    <item row="0" column="1">
     <widget class="QLineEdit" name="nameInput"/>
-   </item>
-   <item row="1" column="1">
-    <widget class="QLineEdit" name="ftypeInput"/>
    </item>
    <item row="4" column="0">
     <widget class="QLabel" name="hpLabel">
@@ -356,12 +50,6 @@
       <string>Name:</string>
      </property>
     </widget>
-   </item>
-   <item row="4" column="1">
-    <widget class="QLineEdit" name="hpInput"/>
-   </item>
-   <item row="3" column="1">
-    <widget class="QLineEdit" name="cpInput"/>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="stypeLabel">
@@ -390,12 +78,206 @@
      </property>
     </widget>
    </item>
+   <item row="3" column="1">
+    <widget class="QSpinBox" name="cpInput">
+     <property name="maximum">
+      <number>99999</number>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QSpinBox" name="hpInput">
+     <property name="maximum">
+      <number>99999</number>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QComboBox" name="ftypeInput">
+     <property name="editable">
+      <bool>true</bool>
+     </property>
+     <property name="currentText">
+      <string>Choose first type</string>
+     </property>
+     <item>
+      <property name="text">
+       <string>Bug</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Dragon</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Electric</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Fairy</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Fighting</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Fire</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Flying</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Ghost</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Grass</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Ground</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Ice</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Normal</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Poison</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Psychic</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Rock</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Water</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QComboBox" name="comboBox">
+     <property name="editable">
+      <bool>true</bool>
+     </property>
+     <property name="currentText">
+      <string>Choose second type</string>
+     </property>
+     <item>
+      <property name="text">
+       <string>Bug</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Dragon</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Electric</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Fairy</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Fighting</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Fire</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Flying</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Ghost</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Grass</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Ground</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Ice</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Normal</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Poison</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Psychic</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Rock</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Water</string>
+      </property>
+     </item>
+    </widget>
+   </item>
   </layout>
  </widget>
  <tabstops>
   <tabstop>nameInput</tabstop>
   <tabstop>ftypeInput</tabstop>
-  <tabstop>stypeInput</tabstop>
+  <tabstop>comboBox</tabstop>
   <tabstop>cpInput</tabstop>
   <tabstop>hpInput</tabstop>
   <tabstop>addButton</tabstop>
